[package]
name = "miclaw_api_bridge"
version = "0.1.0"
description = "Bridge Xiaomi mimo LLM into local OpenAI / Claude compatible APIs"
edition = "2021"
rust-version = "1.77"

[lib]
name = "miclaw_api_bridge_lib"
crate-type = ["rlib"]

[[bin]]
name = "miclaw_api_bridge"
path = "src/main.rs"

[[bin]]
name = "miclaw_api_bridge_desktop"
path = "src/bin/miclaw_api_bridge_desktop.rs"
required-features = ["desktop"]

[dependencies]
# desktop tray runtime (optional; headless CLI does not link GUI crates)
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-util = "0.3"

# http client / cookies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "cookies", "gzip"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
url = "2.5"

# http server (axum proxy)
axum = { version = "0.7", features = ["json", "macros"] }
# axum-server provides TLS. Use the *no-provider* feature and install the ring
# CryptoProvider ourselves so we don't drag in a second provider (aws-lc-rs);
# reqwest's rustls-tls already pins the tree to ring.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# self-signed cert generation; ring backend to match the single provider.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"

# json / serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# crypto / encoding
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
# admin password hashing
argon2 = "0.5"

# storage
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-async-persistent", "tokio", "crypto-rust"] }
directories = "5.0"

# misc
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bytes = "1.8"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.5"
mime_guess = "2.0"
open = "5.3"

[target.'cfg(target_os = "linux")'.dependencies]
# keyring's Linux Secret Service backend needs an explicit runtime + crypto selection.
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }
ksni = { version = "0.2.2", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tao = { version = "0.35", optional = true }
tray-icon = { version = "0.23", optional = true, default-features = false }

[features]
default = []
desktop = ["dep:image", "dep:ksni", "dep:tao", "dep:tray-icon"]
custom-protocol = []
