[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mbclaw-cli"
version = "0.1.0"
description = "MBclaw Linux CLI Client"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
mbclaw = "mbclaw_cli.cli:main"
